data/derived/sp14/progs/unify/prog1072.ml.out
Characters 168-181:
  | Cosine(p1) -> cos(pi *. evalhelper p1)
                            ^^^^^^^^^^^^^
Error: This expression has type int -> int -> float
       but an expression was expected of type float
